--- a/WebApplication1/Views/Home/Dispatch.cshtml
+++ b/WebApplication1/Views/Home/Dispatch.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
+    Layout = "_Layout";  
     ViewData["Title"] = "Dispatch";
 }
 <div class="container">
     <div class="d-flex align-items-center">
-    <h1 class="display-4 me-4">Authentification</h1>
+    <h1 class="display-4 me-4">Authentification:</h1>
         <button type ="button" class="btn btn-info">Rafraichir</button>
         </div>
     <ul class="list-group">
@@ -15,8 +16,5 @@
             Livraison 71    
             <button class="btn btn-secondary">Gérer</button>
         </li>
-            
-
     </ul>
-    
 </div>
