--- a/WebApplication1/Views/Home/InscriptionClient.cshtml
+++ b/WebApplication1/Views/Home/InscriptionClient.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
+  Layout = "_Layout";  
     ViewData["Title"] = "Client Inscription";
 }
 
 <div class="container">
-    <h1 class="display-4">Inscription - Client</h1>
+    <h1 class="display-4">Inscription - Client:</h1>
   <form >
     <div class="form-group mb-3">
       <label for="entrepriseName">Nom de L'entreprise</label>
@@ -34,9 +35,9 @@
       </div>
     </div>
     <div class="d-grid mb-3" >
-      <label for="logo">Logo de l'entreprise</label>
-      <input type="file" class="form-control-file" id="logo">
+      <label for="photoCamion">Photo du Camion</label>
+      <input type="file" class="form-control-file" id="photoCamion">
     </div>
-    <button type="submit" class="btn btn-primary">Confirmer</button>
+    <button type="submit" class="btn btn-success">Ajouter</button>
   </form>
 </div>
