--- a/WebApplication1/Views/Home/InscriptionMembre.cshtml
+++ b/WebApplication1/Views/Home/InscriptionMembre.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
+    Layout = "_Layout";  
     ViewData["Title"] = "Membre Inscription";
 }
 
 <div class="container">
-    <h1 class="display-4">Inscription - Membre</h1>
+    <h1 class="display-4">Inscription - Membre:</h1>
     <div class=" d-flex flex-column align-items-start ">
         <label for="role_select">Votre Rôle</label>
         <select name="role" id="role_select">
@@ -18,7 +19,7 @@
                     <input type="text" class="form-control" id="matricule" placeholder="Matricule">
                 </div>
         <div class="form-group mb-3">   
-            <label for="entrepriseName">Nom et Prénom</label>
+            <label>Nom et Prénom</label>
             <div class="d-flex mb-3">
             <input type="text" class="form-control" id="name" placeholder="Nom">
             <input type="text" class="form-control" id="surname" placeholder="Prénom">
