--- a/WebApplication1/Views/Home/Livraison.cshtml
+++ b/WebApplication1/Views/Home/Livraison.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
+  Layout = "_Layout";  
     ViewData["Title"] = "Livraison";
 }
 <div class="container">
-    <h2 class="display-4">Livraison</h2>
-    <a class="btn btn-secondary">Créer une Livraison</a>
+    <h2 class="display-4">Livraison :</h2>
+    <a class="btn btn-secondary" asp-controller="Home" asp-action="CreerLivraison">Créer une Livraison</a>
     <h2 class="display-4">Historique</h2>
   <div class="mb-5">
     <table class="table table-striped">
