--- a/WebApplication1/Views/Home/Connexion.cshtml
+++ b/WebApplication1/Views/Home/Connexion.cshtml
@@ -1,13 +1,14 @@
 ﻿@{
+    Layout = "_Layout";  
     ViewData["Title"] = "Authentification";
 }
 
 <div class="container">
-    <h1 class="display-4">Authentification</h1>
+    <h1 class="display-4">Authentification:</h1>
     <form>
         <div class="form-group mb-3">
                     <label for="mail">Mail</label>
-                    <input type="text" class="form-control" id="mail" placeholder="email">
+                    <input type="email" class="form-control" id="mail" placeholder="email">
                 </div>
         <div class="form-group mb-3">
             <label for="passwordUser">Mot de passe</label>
