--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -26,11 +26,23 @@
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Profil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Livraison">Livraison</a>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Livraison">Livraison Client</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Dispatch">Dispatch</a>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="LivraisonDispatch">Livraison Dispatch</a>
                         </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Dispatch">Dispatch</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="GestionEffectif">Gestion ADMIN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ClientListe">Liste des Clients</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Statistique">Statistiques</a>
+                    </li>
                 </ul>
             </div>
             <div class="navbar-collapse collapse d-sm-inline-flex">
