--- a/WebApplication1/Views/Home/AjouterCamion.cshtml
+++ b/WebApplication1/Views/Home/AjouterCamion.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
     <h1 class="display-4">Ajouter un Camion:</h1>
-    <form>
+    <form method="POST">
         <div class="form-group mb-3">
             <label for="immat">Plaque d'immatriculation</label>
             <input type="text" class="form-control" id="immat" placeholder="Immatriculation">
