--- a/WebApplication1/Views/Home/AjouterCamion.cshtml
+++ b/WebApplication1/Views/Home/AjouterCamion.cshtml
@@ -1,35 +1,42 @@
-﻿@{
+﻿@model WebApplication1.Models.Camion
+@{
     Layout = "_Layout";  
     ViewData["Title"] = "Ajouter Un Camion";
 }
 
 <div class="container">
     <h1 class="display-4">Ajouter un Camion:</h1>
-    <form method="POST">
+    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="AjouterCamion">
         <div class="form-group mb-3">
-            <label for="immat">Plaque d'immatriculation</label>
-            <input type="text" class="form-control" id="immat" placeholder="Immatriculation">
+            <label for="Immatriculation">Plaque d'immatriculation</label>
+            <input asp-for="Immatriculation" type="text" class="form-control" id="immat" placeholder="Immatriculation">
         </div>
         <div class="form-group mb-3">
-            <label for="modele">Modèle</label>
-            <input type="text" class="form-control" id="modele" placeholder="Modèle">
+            <label for="Modèle">Modèle</label>
+            <input asp-for="Modèle"type="text" class="form-control" id="Modèle" placeholder="Modèle">
         </div>
         <div class="form-group mb-3">
-            <label for="marque">Marque</label>
-            <input type="text" class="form-control" id="marque" placeholder="Marque">
+            <label for="Marque">Marque</label>
+            <input asp-for="Marque" type="text" class="form-control" id="marque" placeholder="Marque">
             </div>
         <div class="form-group mb-3">
-            <label for="marque">Tonnage Max</label>
-            <input type="text" class="form-control" id="marque" placeholder="Marque">
+            <label for="Tonnage">Tonnage Max</label>
+            <input asp-for="Tonnage" type="text" class="form-control" id="Tonnage" placeholder="Tonnage">
         </div>
         <div class="d-grid mb-3" >
-            <label for="logo">Logo de l'entreprise</label>
-            <input type="file" class="form-control-file" id="logo">
+            <label for="Img">Logo de l'entreprise</label>
+            <input asp-for="Img" type="file" class="form-control-file" id="img">
         </div>
         <div class="form-check mb-4">
-                  <label class="form-check-label"> Choissisez le permis nécessaire pour le camion</label>
-                    <div><input class="form-check-input" type="radio" name ="permisCamion" value="Maladie" id="permisC"><label class="form-check-label ms-3" for="permisC">Permis C</label></div>
-                    <div><input class="form-check-input" type="radio" name ="permisCamion" value="Accident" id="permisCE"><label class="form-check-label ms-3" for="permisCE">Permis CE</label></div>
+            <label class="form-check-label"> Choissisez le permis nécessaire pour le camion</label>
+            <div>
+                <input asp-for="Type" class="form-check-input" type="radio" name="Type" value="C" id="permisC">
+                <label class="form-check-label ms-3" for="permisC">Permis C</label>
+            </div>
+            <div>
+                <input asp-for="Type" class="form-check-input" type="radio" name="Type" value="CE" id="permisCE">
+                <label class="form-check-label ms-3" for="permisCE">Permis CE</label>
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Confirmer</button>
     </form>
