--- a/WebApplication1/Views/Home/AjouterCamion.cshtml
+++ b/WebApplication1/Views/Home/AjouterCamion.cshtml
@@ -12,8 +12,8 @@
             <input asp-for="Immatriculation" type="text" class="form-control" id="immat" placeholder="Immatriculation">
         </div>
         <div class="form-group mb-3">
-            <label for="Modèle">Modèle</label>
-            <input asp-for="Modèle"type="text" class="form-control" id="Modèle" placeholder="Modèle">
+            <label for="Modele">Modèle</label>
+            <input asp-for="Modele"type="text" class="form-control" id="Modele" placeholder="Modele">
         </div>
         <div class="form-group mb-3">
             <label for="Marque">Marque</label>
