--- a/WebApplication1/Views/Home/Connexion.cshtml
+++ b/WebApplication1/Views/Home/Connexion.cshtml
@@ -5,14 +5,14 @@
 
 <div class="container">
     <h1 class="display-4">Authentification:</h1>
-    <form>
+    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="Connexion">
         <div class="form-group mb-3">
-                    <label for="mail">Mail</label>
-                    <input type="email" class="form-control" id="mail" placeholder="email">
+                    <label for="email">Mail</label>
+                    <input type="email" name="email" class="form-control" id="email" placeholder="email">
                 </div>
         <div class="form-group mb-3">
-            <label for="passwordUser">Mot de passe</label>
-            <input type="password" class="form-control" id="passwordUser" placeholder="Mot de passe">
+            <label for="password">Mot de passe</label>
+            <input type="password" name="password" class="form-control" id="password" placeholder="Mot de passe">
         </div>
         <button type="submit" class="btn btn-primary">Confirmer</button>
     </form>
