--- a/WebApplication1/Views/Home/InscriptionMembre.cshtml
+++ b/WebApplication1/Views/Home/InscriptionMembre.cshtml
@@ -2,10 +2,24 @@
     Layout = "_Layout";  
     ViewData["Title"] = "Membre Inscription";
 }
+@section Scripts {
+    <script>
+        function checkPassword() {
+            var motDePasse = document.getElementById('passwordUser').value;
+            var motDePasseConfirm = document.getElementById('passwordUserConfirm').value;
+
+            if (motDePasse !== motDePasseConfirm) {
+                alert("Les mots de passe ne correspondent pas.");
+                return false;
+            }
+            return true;
+        }
+    </script>
+}
 
 <div class="container">
     <h1 class="display-4">Inscription - Membre:</h1>
-    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="InscriptionMembres">
+    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="InscriptionMembre" onsubmit="return checkPassword();">
         <div class=" d-flex flex-column align-items-start ">
                 <label for="role_select">Votre Rôle</label>
                     <select name="role" id="role_select">
