--- a/WebApplication1/Views/Home/GererLivraison.cshtml
+++ b/WebApplication1/Views/Home/GererLivraison.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@attribute [Authorize(Roles = "Dispatcher")]
+@{
     Layout = "_Layout";  
     ViewData["Title"] = "Gérer la livraison ";
 }
