--- a/WebApplication1/Views/Home/GestionEffectif.cshtml
+++ b/WebApplication1/Views/Home/GestionEffectif.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@attribute [Authorize(Roles = "Admin")]
+
+@{
 Layout = "_Layout";  
 ViewData["Title"] = "Gestion des effectifs";
 }
