--- a/WebApplication1/Views/Home/Livraison.cshtml
+++ b/WebApplication1/Views/Home/Livraison.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@attribute [Authorize(Roles = "Client")]
+@{
   Layout = "_Layout";  
     ViewData["Title"] = "Livraison";
 }
