--- a/WebApplication1/Views/Home/AjouterCamion.cshtml
+++ b/WebApplication1/Views/Home/AjouterCamion.cshtml
@@ -24,7 +24,7 @@
             <input asp-for="Tonnage" type="text" class="form-control" id="Tonnage" placeholder="Tonnage">
         </div>
         <div class="d-grid mb-3" >
-            <label for="Img">Logo de l'entreprise</label>
+            <label for="Img">Image du Camion</label>
             <input asp-for="Img" type="file" class="form-control-file" id="img">
         </div>
         <div class="form-check mb-4">
