--- a/WebApplication1/Views/Home/Livraison.cshtml
+++ b/WebApplication1/Views/Home/Livraison.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
   Layout = "_Layout";  
     ViewData["Title"] = "Livraison";
+  @model List<Livraison>
 }
 <div class="container">
-    <h2 class="display-4">Livraison :</h2>
-    <a class="btn btn-secondary" asp-controller="Home" asp-action="CreerLivraison">Créer une Livraison</a>
-    <h2 class="display-4">Historique</h2>
+  <h2 class="display-4">Livraison :</h2>
+  <a class="btn btn-secondary" asp-controller="Home" asp-action="CreerLivraison">Créer une Livraison</a>
+  <h2 class="display-4">Historique</h2>
   <div class="mb-5">
     <table class="table table-striped">
       <thead>
@@ -16,47 +17,52 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <th scope="row">Livraison 64</th>
-        <td><span class="badge rounded-pill bg-warning text-dark"> Validé </span></td>
-        <td></td>
-      </tr>
-      <tr>
-        <th scope="row">Livraison 65</th>
-        <td><span class="badge rounded-pill bg-danger">En cours</span></td>
-        <td><a class="btn btn-secondary btn-sm">Modifier</a></td>
-      </tr>
-      <tr>
-        <th scope="row">Livraison 66</th>
-        <td><span class="badge rounded-pill bg-danger">En cours</span></td>
-        <td><a class="btn btn-secondary btn-sm">Modifier</a></td>
-      </tr>
+      @RenderSection("ListLivraison")
       </tbody>
     </table>
   </div>
   <hr class="hr hr-blurry mb-5" />
   <div>
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">Identification</th>
-                <th scope="col">État</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Livraison 64</th>
-                <td><span class="badge rounded-pill bg-success">Livrée</span></td>
-              </tr>
-              <tr>
-                <th scope="row">Livraison 65</th>
-                <td><span class="badge rounded-pill bg-success">Livrée</span></td>
-              </tr>
-              <tr>
-                <th scope="row">Livraison 66</th>
-                <td><span class="badge rounded-pill bg-success">Livrée</span></td>
-              </tr>
-            </tbody>
-          </table>
-      </div>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th scope="col">Identification</th>
+        <th scope="col">État</th>
+      </tr>
+      </thead>
+      <tbody>
+      @RenderSection("ListLivreeLivraison")
+      </tbody>
+    </table>
+  </div>
 </div>
+
+
+@section ListLivraison{
+  @foreach (Livraison livraison in Model)/* in List<Livraison>*/
+  {
+    <tr>
+      <th scope="row">Livraison @livraison.ID</th>
+      @if(@livraison.StatutLivraison ==Livraison.Statut.Valide){
+        <td><span class="badge rounded-pill bg-warning text-dark"> @livraison.StatutLivraison </span></td>
+        <td></td>
+      }
+      else
+      {
+        <td><span class="badge rounded-pill bg-danger">En cours</span></td>
+        <td><a class="btn btn-secondary btn-sm" asp-action=""/>Modifier</td>
+      }
+      <td></td>
+    </tr>
+  }
+}
+
+@section ListLivreeLivraison{
+  @foreach (Livraison livraisonLivree in Model)
+  {
+    <tr>
+      <th scope="row">Livraison @livraisonLivree.ID</th>
+      <td><span class="badge rounded-pill bg-success">@livraisonLivree.StatutLivraison</span></td>
+    </tr>
+  }
+}
