--- a/WebApplication1/Views/Home/Dispatch.cshtml
+++ b/WebApplication1/Views/Home/Dispatch.cshtml
@@ -2,19 +2,23 @@
     Layout = "_Layout";  
     ViewData["Title"] = "Dispatch";
 }
+@model List<Livraison>
 <div class="container">
     <div class="d-flex align-items-center">
-    <h1 class="display-4 me-4">Authentification:</h1>
+        <h1 class="display-4 me-4">Authentification:</h1>
         <button type ="button" class="btn btn-info">Rafraichir</button>
-        </div>
+    </div>
     <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            Livraison 70
-            <a class="btn btn-secondary" asp-controller="Home" asp-action="GererLivraison">Gérer</a>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            Livraison 71    
-            <button class="btn btn-secondary">Gérer</button>
-        </li>
+        @RenderSection("ListLivraisonToAttribute")
     </ul>
 </div>
+
+@section ListLivraisonToAttribute{
+    @foreach (Livraison livraison in Model)
+    {
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            Livraison @livraison.ID
+            <a class="btn btn-secondary" asp-controller="Home" asp-action="GererLivraison">Gérer</a>
+        </li>
+    }
+}
