--- a/WebApplication1/Views/Home/GestionEffectif.cshtml
+++ b/WebApplication1/Views/Home/GestionEffectif.cshtml
@@ -84,7 +84,7 @@ ViewData["Title"] = "Gestion des effectifs";
         <li class="list-group-item d-flex justify-content-between align-items-center">
             <div>
                 <p class="fw-bold mb-0">@camion.Immatriculation</p>
-                <p class="mb-0">@camion.Marque @camion.Modèle @camion.Tonnage</p>
+                <p class="mb-0">@camion.Marque @camion.Modele @camion.Tonnage</p>
             </div>
             <div>
                 <a class="btn btn-secondary" asp-controller="Admin" asp-action="ModifierCamion">Mofidier</a>
