--- a/WebApplication1/Views/Shared/InscriptionClientForm.cshtml
+++ b/WebApplication1/Views/Shared/InscriptionClientForm.cshtml
@@ -26,4 +26,6 @@
             <input asp-for="Localite" type="text" class="form-control" id="locality" placeholder="Localité">
             <input asp-for="Pays" type="text" class="form-control" id="country" placeholder="Pays">
         </div>
+        
+        <button type="submit" class="btn btn-success">Ajouter</button>
     </div>
