--- a/WebApplication1/Views/Shared/_AllLogoClient.cshtml
+++ b/WebApplication1/Views/Shared/_AllLogoClient.cshtml
@@ -6,7 +6,7 @@
     string pathToClientFolder = "img/logo/" + nomEntreprise;
     if (Directory.Exists(pathToClientFolder))
     {
-        string pathToClientLogo = pathToClientFolder+client.ID;
+        string pathToClientLogo = pathToClientFolder+client.Id;
         if (File.Exists(pathToClientLogo))
         {
             <img class="m-2" src="@pathToClientLogo" width="100" height="100" alt="logoCodLab"/>
