--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Livraison">Livraison Client</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Profil</a>
+                                <a class="nav-link" asp-controller="Home" asp-action="ModificationClient">Profil</a>
                             </li>
                         }
                     }
