--- a/WebApplication1/Views/Home/ModificationClient.cshtml
+++ b/WebApplication1/Views/Home/ModificationClient.cshtml
@@ -52,7 +52,7 @@
                 <input  type="text" class="form-control" id="pays" placeholder="Pays" name="pays">
             </div>
             <div class="d-grid mb-3" >
-                        <label for="logo">Image du Camion</label>
+                        <label for="logo">Image logo entreprise</label>
                 <input type="file" class="form-control-file" id="logo" name="logo">
                 </div>
         </div>
