--- a/WebApplication1/Views/Shared/ModificationDispatcher.cshtml
+++ b/WebApplication1/Views/Shared/ModificationDispatcher.cshtml
@@ -17,7 +17,7 @@
     </script>
 }
 <div class="container">
-    <h1 class="display-4">Modification - Membre:</h1>
+    <h1 class="display-4">Modification - Dispatcher:</h1>
     <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="ModificationDispatcher" onsubmit="return checkPassword();">
         <div class="form-group mb-3">
             <label for="matricule">Matricule</label>
