--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                                 <a class="nav-link" asp-controller="Home" asp-action="LivraisonDispatch">Livraison Dispatch</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link"  asp-controller="Home" asp-action="Privacy">Profil</a>
+                                <a class="nav-link"  asp-controller="Home" asp-action="ModificationChauffeur">Profil</a>
                             </li>
                         }
                     }
