--- a/WebApplication1/Views/Home/CreerLivraison.cshtml
+++ b/WebApplication1/Views/Home/CreerLivraison.cshtml
@@ -7,9 +7,32 @@
     Layout = "_Layout";  
     ViewData["Title"] = "Création d'une Livraison";
 }
+@section Scripts {
+    <script>
+        document.querySelector('form').addEventListener('submit', function (event) {
+            var dateChargementElement = document.getElementById('dateChargement');
+            var heureChargementElement = document.getElementById('heureChargement');
+            var dateDechargementElement = document.getElementById('dateDechargement');
+            var heureDechargementPrevuElement = document.getElementById('heureDechargementPrevu');
+
+            var dateChargement = new Date(dateChargementElement.value + "T" + heureChargementElement.value);
+            var dateDechargement = new Date(dateDechargementElement.value + "T" + heureDechargementPrevuElement.value);
+            var now = new Date();
+
+            if (dateChargement >= dateDechargement) {
+                alert('La date de déchargement doit être postérieure à la date de chargement.');
+                event.preventDefault();
+            }
+            else if (dateChargement < now || dateDechargement < now) {
+                alert("La date de chargement et de déchargement ne peut pas être antérieure à aujourd'hui.");
+                event.preventDefault();
+            }
+        });
+    </script>
+}
 <div class="container">
     <h1 class="display-4 me-4">Création d'une Livraison:</h1>
-    <form enctype="multipart/form-data" asp-controller="Home" asp-action="CreerLivraison">
+    <form enctype="multipart/form-data" asp-controller="Home" asp-action="CreerLivraison" >
         <div class="mb-3">
             <label for="lieuChargement" class="form-label">Lieu de Chargement</label>
             <input asp-for="LieuChargement" type="text" class="form-control" id="lieuChargment" >
