Page livraison + modif

--- a/WebApplication1/Views/Home/Livraison.cshtml
+++ b/WebApplication1/Views/Home/Livraison.cshtml
@@ -4,12 +4,12 @@
 @{
   Layout = "_Layout";  
     ViewData["Title"] = "Livraison";
-  @model List<Livraison>
+  @model LivraisonViewModel
 }
 <div class="container">
   <h2 class="display-4">Livraison :</h2>
   <a class="btn btn-secondary" asp-controller="Home" asp-action="CreerLivraison">Créer une Livraison</a>
-  <h2 class="display-4">Historique</h2>
+  <h2 class="display-4">En cours</h2>
   <div class="mb-5">
     <table class="table table-striped">
       <thead>
@@ -20,10 +20,22 @@
       </tr>
       </thead>
       <tbody>
+      @foreach (var livraison in Model.LivraisonsEnAttente)
+      {
+        <tr>
+          <td>@livraison.Contenu</td>
+          <td>@livraison.StatutLivraison</td>
+          <td>
+            <a asp-controller="Home" asp-action="ModifierLivraison" asp-route-id="@livraison.ID" class="btn btn-primary">Modifier</a>
+          </td>
+        </tr>
+      }
+
       </tbody>
     </table>
   </div>
   <hr class="hr hr-blurry mb-5" />
+  <h2 class="display-4">Historique</h2>
   <div>
     <table class="table table-striped">
       <thead>
@@ -33,7 +45,13 @@
       </tr>
       </thead>
       <tbody>
-      
+       @foreach (var livraison in Model.LivraisonsFini)
+            {
+              <tr>
+                <td>@livraison.Contenu</td>
+                <td>@livraison.StatutLivraison</td>
+              </tr>
+            }
       </tbody>
     </table>
   </div>
