--- a/WebApplication1/Views/Home/GestionEffectif.cshtml
+++ b/WebApplication1/Views/Home/GestionEffectif.cshtml
@@ -1,12 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @attribute [Authorize(Roles = "Admin")]
+@model GestionEffectifViewModel
 
 @{
 Layout = "_Layout";  
 ViewData["Title"] = "Gestion des effectifs";
-    List<Chauffeur> listChauffeur = new List<Chauffeur>();
-    List<Camion> listCamion = new List<Camion>();
 }
 <div class="container">
     <h1 class="display-4 me-4">Gestion des Effectifs:</h1>
@@ -19,11 +18,18 @@ ViewData["Title"] = "Gestion des effectifs";
                 <th scope="col">Permis B</th>
                 <th scope="col">Permis C</th>
                 <th scope="col">Permis CE</th>
-                <th scope="col">Controle</th>
             </tr>
             </thead>
             <tbody>
-            @RenderSection("chauffeurWithPermis")
+            @foreach (var chauffeur in Model.Chauffeurs)
+            {
+                <tr>
+                    <td>@chauffeur.Nom @chauffeur.Prenom</td>
+                    <td><input type="checkbox" checked="@chauffeur.PermisB"  /></td>
+                    <td><input type="checkbox" checked="@chauffeur.PermisC"  /></td>
+                    <td><input type="checkbox" checked="@chauffeur.PermisCE"  /></td>
+                </tr>
+            }
             </tbody>
         </table>
     </div>
@@ -32,65 +38,26 @@ ViewData["Title"] = "Gestion des effectifs";
     <a class="btn btn-success mb-3" asp-controller="Home" asp-action="AjouterCamion">Ajouter un camion</a>
     <div class="mb-5">
         <ul class="list-group">
-            @RenderSection("listCamion")
+            @foreach (var camion in Model.Camions)
+            {
+                
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                        <p class="fw-bold mb-0">@camion.Immatriculation</p>
+                        <p class="mb-0">@camion.Marque @camion.Modele @camion.Tonnage</p>
+                    </div>
+                    <div>
+                        <form asp-controller="Home" asp-action="SupprimerCamion" method="post">
+                            <input type="hidden" name="id" value="@camion.ID" />
+                            <button type="submit" class="btn btn-danger">Supprimer</button>
+                        </form>
+                        <a class="btn btn-secondary" asp-controller="Home" asp-action="ModificationCamion" asp-route-id="@camion.ID">Modifier</a>
+                    </div>
+                </li>
+
+            }
         </ul>
     </div>
 </div>
 
 
-@section chauffeurWithPermis{
-    @foreach (Chauffeur chauffeur in listChauffeur)
-    {
-        <tr>
-            <th scope="row">@chauffeur.Nom @chauffeur.Prenom</th>
-            <td>
-            @if (chauffeur.PermisB == true)
-            {
-                <input class="form-check-input" type="checkbox" value="B" id="permisB" checked>
-            }
-            else
-            {
-                <input class="form-check-input" type="checkbox" value="B" id="permisB">
-            }
-            <label class="form-check-label ms-3" for="permisB">Permis B</label></td>
-        <td>
-            @if (chauffeur.PermisC == true)
-            {
-                <input class="form-check-input" type="checkbox" value="C" id="permisC" checked>
-            }
-            else
-            {
-                <input class="form-check-input" type="checkbox" value="C" id="permisC">                     
-            }
-            <label class="form-check-label ms-3" for="permisC">Permis C</label></td>
-        <td>
-            @if (chauffeur.PermisCE == true)
-            {
-                <input class="form-check-input" type="checkbox" value="CE" id="permisCE" checked>
-            }
-            else
-            {
-                <input class="form-check-input" type="checkbox" value="CE" id="permisCE">
-            }
-            <label class="form-check-label ms-3" for="permisCE">Permis CE</label></td>
-            <td><a class="btn btn-secondary btn-sm" asp-controller="Admin" asp-action="ModifierPermisChauffeur">Modifier</a></td>
-        </tr>
-    }
-}
-
-@section listCamion{
-    @foreach (Camion camion in listCamion)
-    {
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            <div>
-                <p class="fw-bold mb-0">@camion.Immatriculation</p>
-                <p class="mb-0">@camion.Marque @camion.Modele @camion.Tonnage</p>
-            </div>
-            <div>
-                <a class="btn btn-secondary" asp-controller="Admin" asp-action="ModifierCamion">Mofidier</a>
-                <a class="btn btn-danger" asp-controller="Admin" asp-action="SupprimerCamion">Supprimer</a>
-            </div>
-        </li>
-    }
-    
-}
