--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
     </article>
     <article class="text-center">
         <h3 class="card-title ">Nos Partenaires</h3>
-        @await Html.PartialAsync("_AllLogoClient", Model)
+        @await Html.PartialAsync("ListElements/_AllLogoClient", Model)
         <img class="m-2" src="img/logo/cod-lab.png" width="100" height="100" alt="logoCodLab"/>
     </article>
 </div>
