--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <title>@ViewData["Title"] - WebApplication1</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/lib/jquery-ui-1.13.2/jquery-ui.css"/>
     <link rel="script" href="js/site.js"/>
     <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true"/>
 </head>
@@ -128,6 +129,8 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
-@await RenderSectionAsync("Scripts", required: false)
+
+@RenderSection("ScriptCamion", required: false)
+@RenderSection("ScriptStats", required: false)
 </body>
 </html>
