--- a/WebApplication1/Views/Home/Dispatch.cshtml
+++ b/WebApplication1/Views/Home/Dispatch.cshtml
@@ -1,27 +1,17 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@attribute [Authorize(Roles = "Admin")]
+@attribute [Authorize(Roles = "Dispatcher")]
 @{
     Layout = "_Layout";  
     ViewData["Title"] = "Dispatch";
 }
-@model List<Livraison>
+@model WebApplication1.ViewModel.TwoListLivraison
 <div class="container">
     <div class="d-flex align-items-center">
-        <h1 class="display-4 me-4">Authentification:</h1>
+        <h2 class="display-4 me-4">Livraisons à traitées: </h2>
         <button type ="button" class="btn btn-info">Rafraichir</button>
     </div>
-    <ul class="list-group">
-        @RenderSection("ListLivraisonToAttribute")
-    </ul>
+    <div>
+    @await Html.PartialAsync("ListElements/_AllLivraisonToAttribute", Model)
+    </div>
 </div>
-
-@section ListLivraisonToAttribute{
-    @foreach (Livraison livraison in Model)
-    {
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            Livraison @livraison.ID
-            <a class="btn btn-secondary" asp-controller="Home" asp-action="GererLivraison">Gérer</a>
-        </li>
-    }
-}
