Profil chuaffeur et dispatcher

--- a/WebApplication1/Views/Home/ProfilClient.cshtml
+++ b/WebApplication1/Views/Home/ProfilClient.cshtml
@@ -33,7 +33,7 @@
                 if (!string.IsNullOrWhiteSpace(Model.logo))
                 {
                     <label for="logo">Logo entreprise</label>
-                    <img src="@Url.Content(Model.logo)" alt="Logo entreprise" />
+                    <img src="@Url.Content(Model.logo)" alt="Logo entreprise" width="=100" height="100" />
                 }
                 else
                 {
