--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 <a class="nav-link" asp-controller="Home" asp-action="Dispatch">Dispatch</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Home" asp-action="ModificationDispatcher">Profil</a>
+                                <a class="nav-link" asp-controller="Home" asp-action="ProfilDispatcher">Profil</a>
                             </li>
                         }
                     }
@@ -51,7 +51,7 @@
                                 <a class="nav-link" asp-controller="Home" asp-action="LivraisonDispatch">Livraison Dispatch</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link"  asp-controller="Home" asp-action="ModificationChauffeur">Profil</a>
+                                <a class="nav-link"  asp-controller="Home" asp-action="ProfilChauffeur">Profil</a>
                             </li>
                         }
                     }
